# apps/backend/docs/api.yaml
@@ -190,19 +190,177 @@ paths:
           required: true
           description: GET /api/v1/elements parameter
           schema:
-            type: string
+            nullable: true
+            type: number
+            format: double
+            minimum: 5e-324
+            exclusiveMinimum: false
+            maximum: 1.7976931348623157e+308
+            exclusiveMaximum: false
           examples:
             example1:
-              value: "1"
+              value: 1
         - name: limit
           in: query
           required: true
           description: GET /api/v1/elements parameter
           schema:
-            type: string
+            nullable: true
+            type: number
+            format: double
+            minimum: 5e-324
+            exclusiveMinimum: false
+            maximum: 1.7976931348623157e+308
+            exclusiveMaximum: false
           examples:
             example1:
-              value: "50"
+              value: 50
+    post:
+      operationId: PostApiV1Elements
+      responses:
+        "200":
+          description: POST /api/v1/elements Successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    enum:
+                      - success
+                  data:
+                    type: object
+                    properties:
+                      id:
+                        type: number
+                        format: double
+                        minimum: 5e-324
+                        exclusiveMinimum: false
+                        maximum: 1.7976931348623157e+308
+                        exclusiveMaximum: false
+                      dn:
+                        type: string
+                      deviceType:
+                        type: string
+                      options:
+                        type: object
+                        properties:
+                          latitude:
+                            type: string
+                          longitude:
+                            type: string
+                          ip:
+                            type: string
+                        required:
+                          - latitude
+                          - longitude
+                          - ip
+                    required:
+                      - id
+                      - dn
+                      - deviceType
+                      - options
+                    example:
+                      id: 1
+                      dn: 125342.T-MOBILE.COM
+                      deviceType: eNodeB
+                      options:
+                        latitude: "123421.312312"
+                        longitude: "12313421.123123"
+                        ip: 129.120.120.2
+                required:
+                  - status
+                  - data
+              examples:
+                example1:
+                  value:
+                    status: success
+                    data:
+                      id: 1
+                      dn: 125342.T-MOBILE.COM
+                      deviceType: eNodeB
+                      options:
+                        latitude: "123421.312312"
+                        longitude: "12313421.123123"
+                        ip: 129.120.120.2
+        "400":
+          description: POST /api/v1/elements Error response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    enum:
+                      - error
+                  error:
+                    type: object
+                    properties:
+                      message:
+                        type: string
+                    required:
+                      - message
+                required:
+                  - status
+                  - error
+              examples:
+                example1:
+                  value:
+                    status: error
+                    error:
+                      message: Sample error message
+      summary: Create element.
+      tags:
+        - elements
+      requestBody:
+        description: POST /api/v1/elements request body
+        content:
+          application/json:
+            schema:
+              allOf:
+                - type: object
+                  properties: {}
+                - type: object
+                  properties:
+                    dn:
+                      type: string
+                    deviceType:
+                      type: string
+                    options:
+                      type: object
+                      properties:
+                        latitude:
+                          type: string
+                        longitude:
+                          type: string
+                        ip:
+                          type: string
+                      required:
+                        - latitude
+                        - longitude
+                        - ip
+                  required:
+                    - dn
+                    - deviceType
+                    - options
+                  example:
+                    dn: 125342.T-MOBILE.COM
+                    deviceType: eNodeB
+                    options:
+                      ip: 129.120.120.2
+                      latitude: "123421.312312"
+                      longitude: "12313421.123123"
+            examples:
+              example1:
+                value:
+                  dn: 125342.T-MOBILE.COM
+                  deviceType: eNodeB
+                  options:
+                    ip: 129.120.120.2
+                    latitude: "123421.312312"
+                    longitude: "12313421.123123"
   "/api/v1/elements/{id}":
     delete:
       operationId: DeleteApiV1ElementsId
@@ -307,6 +465,8 @@ components:
   securitySchemes: {}
   links: {}
   callbacks: {}
-tags: []
+tags:
+  - name: elements
+    description: Everything about the network elements.
 servers:
   - url: http://localhost:8090
